// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PagingTable  1`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 djOnwZ"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 dvrejE"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 imuwbH"
      >
        <label
          class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 htOOow"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 jbIyUK StyledCheckBox-sc-1dbk5ju-6 hOFfoi"
          >
            <input
              class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 fYuA-Ds"
              type="checkbox"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 jYPXhZ StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 kRWCTA"
            />
          </div>
          <span>
            Group rows
          </span>
        </label>
        <label
          class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 htOOow"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 jbIyUK StyledCheckBox-sc-1dbk5ju-6 hOFfoi"
          >
            <input
              checked=""
              class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 fYuA-Ds"
              type="checkbox"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 icgjqF StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 kRWCTA"
            >
              <svg
                class="StyledCheckBox__StyledCheckBoxIcon-sc-1dbk5ju-0 uDaMI"
                preserveAspectRatio="xMidYMid meet"
                viewBox="0 0 24 24"
              >
                <path
                  d="M6,11.3 L10.3,16 L18,6.2"
                  fill="none"
                />
              </svg>
            </div>
          </div>
          <span>
            Sortable
          </span>
        </label>
        <label
          class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 htOOow"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 jbIyUK StyledCheckBox-sc-1dbk5ju-6 hOFfoi"
          >
            <input
              checked=""
              class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 fYuA-Ds"
              type="checkbox"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 icgjqF StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 kRWCTA"
            >
              <svg
                class="StyledCheckBox__StyledCheckBoxIcon-sc-1dbk5ju-0 uDaMI"
                preserveAspectRatio="xMidYMid meet"
                viewBox="0 0 24 24"
              >
                <path
                  d="M6,11.3 L10.3,16 L18,6.2"
                  fill="none"
                />
              </svg>
            </div>
          </div>
          <span>
            Filter
          </span>
        </label>
        <label
          class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 htOOow"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 jbIyUK StyledCheckBox-sc-1dbk5ju-6 hOFfoi"
          >
            <input
              class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 fYuA-Ds"
              type="checkbox"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 jYPXhZ StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 kRWCTA"
            />
          </div>
          <span>
            Paging
          </span>
        </label>
        <div
          class="StyledBox-sc-13pk1d4-0 gQhLwa"
        >
          <button
            aria-label="Open Drop"
            class="StyledButton-sc-323bzc-0 ebqXLG Select__StyledSelectDropButton-sc-17idtfo-1 iGEQF"
            type="button"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 jmuHez"
            >
              <div
                class="StyledBox-sc-13pk1d4-0 iAryDB"
              >
                <div
                  class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 dpaJQp"
                >
                  <input
                    autocomplete="off"
                    class="StyledTextInput-sc-1x30a0s-0 nnMiQ Select__SelectTextInput-sc-17idtfo-0 bIurki"
                    readonly=""
                    tabindex="-1"
                    type="text"
                    value="multiple"
                  />
                </div>
              </div>
              <div
                class="StyledBox-sc-13pk1d4-0 eA-DBEo"
                style="min-width: auto;"
              >
                <svg
                  aria-label="FormDown"
                  class="StyledIcon-ofa7kd-0 fuviCN"
                  viewBox="0 0 24 24"
                >
                  <polyline
                    fill="none"
                    points="18 9 12 15 6 9"
                    stroke="#000"
                    stroke-width="2"
                  />
                </svg>
              </div>
            </div>
          </button>
        </div>
      </div>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 ggstca"
      />
      <div
        class="sc-bBXqnf ecIGsP"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 ePierD sc-bdfBwQ gpAVaP"
          role="grid"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 jettNR sc-dlfnbm fyQhTN"
            style="min-width: 446px;"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 bEnuwL sc-gKsewC jbDERx"
              role="row"
            >
              <div
                class="StyledBox-sc-13pk1d4-0 dnixWH sc-eCssSg jfecve"
                role="columnheader"
                style="flex: 100 0 auto; width: 146px;"
                tabindex="0"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 lgIRBj"
                >
                  <span
                    class="StyledText-sc-1sadyjn-0 DkZvS"
                  />
                </div>
              </div>
              <div
                class="StyledBox-sc-13pk1d4-0 dnixWH sc-eCssSg jfecve"
                role="columnheader"
                style="flex: 300 0 auto; width: 300px;"
                tabindex="0"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 lgIRBj"
                >
                  <span
                    class="StyledText-sc-1sadyjn-0 DkZvS"
                  >
                    Inventory
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 dYebPD sc-dlfnbm fyQhTN"
            style="min-width: 446px;"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 bEnuwL sc-gKsewC jbDERx"
              role="row"
            >
              <div
                class="StyledBox-sc-13pk1d4-0 dnixWH sc-eCssSg jfecve"
                role="columnheader"
                style="flex: 46 0 auto; width: 46px; max-width: 46px;"
                tabindex="0"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 dkXwEi"
                >
                  <span
                    class="StyledText-sc-1sadyjn-0 DkZvS"
                  />
                </div>
              </div>
              <div
                class="StyledBox-sc-13pk1d4-0 dnixWH sc-eCssSg fEsIsO"
                role="columnheader"
                style="flex: 100 0 auto; width: 100px;"
                tabindex="0"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 clrQGX"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 dfYOnT"
                  >
                    <span
                      class="StyledText-sc-1sadyjn-0 DkZvS"
                    >
                      Item
                      <div
                        class="StyledBox-sc-13pk1d4-0 dYebPD sc-hKgILt cUcqsE"
                      />
                    </span>
                    <div
                      class="StyledBox__StyledBoxGap-sc-13pk1d4-1 bAwsPu"
                    />
                    <button
                      class="StyledButton-sc-323bzc-0 ebqXLG"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        class="StyledIcon-ofa7kd-0 dEeaTZ"
                        viewBox="0 0 24 24"
                      />
                    </button>
                  </div>
                </div>
              </div>
              <div
                class="StyledBox-sc-13pk1d4-0 dnixWH sc-eCssSg fEsIsO"
                role="columnheader"
                style="flex: 100 0 auto; width: 100px;"
                tabindex="0"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 dkXwEi"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 dfYOnT"
                  >
                    <span
                      class="StyledText-sc-1sadyjn-0 DkZvS"
                    >
                      Qty
                      <div
                        class="StyledBox-sc-13pk1d4-0 dYebPD sc-hKgILt cUcqsE"
                      />
                    </span>
                    <div
                      class="StyledBox__StyledBoxGap-sc-13pk1d4-1 bAwsPu"
                    />
                    <button
                      class="StyledButton-sc-323bzc-0 ebqXLG"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        class="StyledIcon-ofa7kd-0 dEeaTZ"
                        viewBox="0 0 24 24"
                      />
                    </button>
                  </div>
                </div>
              </div>
              <div
                class="StyledBox-sc-13pk1d4-0 dnixWH sc-eCssSg fEsIsO"
                role="columnheader"
                style="flex: 100 0 auto; width: 100px;"
                tabindex="0"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 dkXwEi"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 dfYOnT"
                  >
                    <span
                      class="StyledText-sc-1sadyjn-0 DkZvS"
                    >
                      Price
                      <div
                        class="StyledBox-sc-13pk1d4-0 dYebPD sc-hKgILt cUcqsE"
                      />
                    </span>
                    <div
                      class="StyledBox__StyledBoxGap-sc-13pk1d4-1 bAwsPu"
                    />
                    <button
                      class="StyledButton-sc-323bzc-0 ebqXLG"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        class="StyledIcon-ofa7kd-0 dEeaTZ"
                        viewBox="0 0 24 24"
                      />
                    </button>
                  </div>
                </div>
              </div>
              <div
                class="StyledBox-sc-13pk1d4-0 dnixWH sc-eCssSg fEsIsO"
                role="columnheader"
                style="flex: 100 0 auto; width: 100px;"
                tabindex="0"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 dkXwEi"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 dfYOnT"
                  >
                    <span
                      class="StyledText-sc-1sadyjn-0 DkZvS"
                    >
                      Total
                      <div
                        class="StyledBox-sc-13pk1d4-0 dYebPD sc-hKgILt cUcqsE"
                      />
                    </span>
                    <div
                      class="StyledBox__StyledBoxGap-sc-13pk1d4-1 bAwsPu"
                    />
                    <button
                      class="StyledButton-sc-323bzc-0 ebqXLG"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        class="StyledIcon-ofa7kd-0 dEeaTZ"
                        viewBox="0 0 24 24"
                      />
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 dYebPD sc-dlfnbm fyQhTN"
            style="min-width: 446px;"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 bEnuwL sc-gKsewC jbDERx"
              role="row"
            >
              <div
                class="StyledBox-sc-13pk1d4-0 dnixWH sc-eCssSg jfecve"
                role="columnheader"
                style="flex: 46 0 auto; width: 46px; max-width: 46px;"
                tabindex="0"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 bprqoJ"
                >
                  <span
                    class="StyledText-sc-1sadyjn-0 DkZvS"
                  />
                </div>
              </div>
              <div
                class="StyledBox-sc-13pk1d4-0 dnixWH sc-eCssSg jfecve"
                role="columnheader"
                style="flex: 100 0 auto; width: 100px;"
                tabindex="0"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 bprqoJ"
                >
                  <span
                    class="StyledText-sc-1sadyjn-0 DkZvS"
                  >
                    <div
                      class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 dpaJQp"
                    >
                      <input
                        aria-label="Filter data by Item"
                        autocomplete="off"
                        class="StyledTextInput-sc-1x30a0s-0 ClxNk"
                        placeholder="Filter..."
                        value=""
                      />
                    </div>
                  </span>
                </div>
              </div>
              <div
                class="StyledBox-sc-13pk1d4-0 dnixWH sc-eCssSg jfecve"
                role="columnheader"
                style="flex: 100 0 auto; width: 100px;"
                tabindex="0"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 bprqoJ"
                >
                  <span
                    class="StyledText-sc-1sadyjn-0 DkZvS"
                  >
                    <div
                      class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 dpaJQp"
                    >
                      <input
                        aria-label="Filter data by Qty"
                        autocomplete="off"
                        class="StyledTextInput-sc-1x30a0s-0 ClxNk"
                        placeholder="Filter..."
                        value=""
                      />
                    </div>
                  </span>
                </div>
              </div>
              <div
                class="StyledBox-sc-13pk1d4-0 dnixWH sc-eCssSg jfecve"
                role="columnheader"
                style="flex: 100 0 auto; width: 100px;"
                tabindex="0"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 bprqoJ"
                >
                  <span
                    class="StyledText-sc-1sadyjn-0 DkZvS"
                  >
                    <div
                      class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 dpaJQp"
                    >
                      <input
                        aria-label="Filter data by Price"
                        autocomplete="off"
                        class="StyledTextInput-sc-1x30a0s-0 ClxNk"
                        placeholder="Filter..."
                        value=""
                      />
                    </div>
                  </span>
                </div>
              </div>
              <div
                class="StyledBox-sc-13pk1d4-0 dnixWH sc-eCssSg jfecve"
                role="columnheader"
                style="flex: 100 0 auto; width: 100px;"
                tabindex="0"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 bprqoJ"
                >
                  <span
                    class="StyledText-sc-1sadyjn-0 DkZvS"
                  >
                    <div
                      class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 dpaJQp"
                    >
                      <input
                        aria-label="Filter data by Total"
                        autocomplete="off"
                        class="StyledTextInput-sc-1x30a0s-0 ClxNk"
                        placeholder="Filter..."
                        value=""
                      />
                    </div>
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 csIsXK sc-gsTCUz"
            style="min-width: 446px;"
          >
            <div />
            <div
              class="StyledBox-sc-13pk1d4-0 dYebPD sc-jSgupP bBlXXz"
              role="rowgroup"
            >
              <div
                class="StyledBox-sc-13pk1d4-0 coZkFg sc-gKsewC jbDERx"
                role="row"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 dYebPD sc-iBPRYJ izjIZe"
                  role="gridcell"
                  style="flex: 46 0 auto; width: 46px; max-width: 46px;"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 bdabZt"
                    tabindex="0"
                  >
                    <button
                      aria-label="Press Enter to expand this row for more information"
                      class="StyledButton-sc-323bzc-0 hiyJPE sc-fubCfw krfBye"
                      tabindex="0"
                      type="button"
                    >
                      <svg
                        aria-label="Add"
                        class="StyledIcon-ofa7kd-0 fuviCN"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M12,22 L12,2 M2,12 L22,12"
                          fill="none"
                          stroke="#000"
                          stroke-width="2"
                        />
                      </svg>
                    </button>
                  </div>
                </div>
                <div
                  class="StyledBox-sc-13pk1d4-0 dYebPD sc-iBPRYJ izjIZe"
                  role="gridcell"
                  style="flex: 100 0 auto; width: 100px;"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 bdabZt"
                    tabindex="0"
                  >
                    <span
                      class="StyledText-sc-1sadyjn-0 DkZvS"
                    >
                      Fork
                    </span>
                  </div>
                </div>
                <div
                  class="StyledBox-sc-13pk1d4-0 dYebPD sc-iBPRYJ izjIZe"
                  role="gridcell"
                  style="flex: 100 0 auto; width: 100px;"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 ciRXCH"
                    tabindex="0"
                  >
                    <span
                      class="StyledText-sc-1sadyjn-0 DkZvS"
                    >
                      4
                    </span>
                  </div>
                </div>
                <div
                  class="StyledBox-sc-13pk1d4-0 dYebPD sc-iBPRYJ izjIZe"
                  role="gridcell"
                  style="flex: 100 0 auto; width: 100px;"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 ciRXCH"
                    tabindex="0"
                  >
                    <span
                      class="StyledText-sc-1sadyjn-0 DkZvS"
                    >
                      5.5
                    </span>
                  </div>
                </div>
                <div
                  class="StyledBox-sc-13pk1d4-0 dYebPD sc-iBPRYJ izjIZe"
                  role="gridcell"
                  style="flex: 100 0 auto; width: 100px;"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 hyrRvH"
                    tabindex="0"
                  >
                    <span
                      class="StyledText-sc-1sadyjn-0 cAmTWO"
                    >
                      22
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="StyledBox-sc-13pk1d4-0 dYebPD sc-jSgupP bBlXXz"
              role="rowgroup"
            >
              <div
                class="StyledBox-sc-13pk1d4-0 bEnuwL sc-gKsewC jbDERx"
                role="row"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 dYebPD sc-iBPRYJ izjIZe"
                  role="gridcell"
                  style="flex: 46 0 auto; width: 46px; max-width: 46px;"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 bdabZt"
                    tabindex="0"
                  >
                    <button
                      aria-label="Press Enter to expand this row for more information"
                      class="StyledButton-sc-323bzc-0 hiyJPE sc-fubCfw krfBye"
                      tabindex="0"
                      type="button"
                    >
                      <svg
                        aria-label="Add"
                        class="StyledIcon-ofa7kd-0 fuviCN"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M12,22 L12,2 M2,12 L22,12"
                          fill="none"
                          stroke="#000"
                          stroke-width="2"
                        />
                      </svg>
                    </button>
                  </div>
                </div>
                <div
                  class="StyledBox-sc-13pk1d4-0 dYebPD sc-iBPRYJ izjIZe"
                  role="gridcell"
                  style="flex: 100 0 auto; width: 100px;"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 bdabZt"
                    tabindex="0"
                  >
                    <span
                      class="StyledText-sc-1sadyjn-0 DkZvS"
                    >
                      Fork
                    </span>
                  </div>
                </div>
                <div
                  class="StyledBox-sc-13pk1d4-0 dYebPD sc-iBPRYJ izjIZe"
                  role="gridcell"
                  style="flex: 100 0 auto; width: 100px;"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 ciRXCH"
                    tabindex="0"
                  >
                    <span
                      class="StyledText-sc-1sadyjn-0 DkZvS"
                    >
                      1
                    </span>
                  </div>
                </div>
                <div
                  class="StyledBox-sc-13pk1d4-0 dYebPD sc-iBPRYJ izjIZe"
                  role="gridcell"
                  style="flex: 100 0 auto; width: 100px;"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 ciRXCH"
                    tabindex="0"
                  >
                    <span
                      class="StyledText-sc-1sadyjn-0 DkZvS"
                    >
                      5.2
                    </span>
                  </div>
                </div>
                <div
                  class="StyledBox-sc-13pk1d4-0 dYebPD sc-iBPRYJ izjIZe"
                  role="gridcell"
                  style="flex: 100 0 auto; width: 100px;"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 hyrRvH"
                    tabindex="0"
                  >
                    <span
                      class="StyledText-sc-1sadyjn-0 cAmTWO"
                    >
                      5.2
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="StyledBox-sc-13pk1d4-0 dYebPD sc-jSgupP bBlXXz"
              role="rowgroup"
            >
              <div
                class="StyledBox-sc-13pk1d4-0 coZkFg sc-gKsewC jbDERx"
                role="row"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 dYebPD sc-iBPRYJ izjIZe"
                  role="gridcell"
                  style="flex: 46 0 auto; width: 46px; max-width: 46px;"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 bdabZt"
                    tabindex="0"
                  >
                    <button
                      aria-label="Press Enter to expand this row for more information"
                      class="StyledButton-sc-323bzc-0 hiyJPE sc-fubCfw krfBye"
                      tabindex="0"
                      type="button"
                    >
                      <svg
                        aria-label="Add"
                        class="StyledIcon-ofa7kd-0 fuviCN"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M12,22 L12,2 M2,12 L22,12"
                          fill="none"
                          stroke="#000"
                          stroke-width="2"
                        />
                      </svg>
                    </button>
                  </div>
                </div>
                <div
                  class="StyledBox-sc-13pk1d4-0 dYebPD sc-iBPRYJ izjIZe"
                  role="gridcell"
                  style="flex: 100 0 auto; width: 100px;"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 bdabZt"
                    tabindex="0"
                  >
                    <span
                      class="StyledText-sc-1sadyjn-0 DkZvS"
                    >
                      Knife
                    </span>
                  </div>
                </div>
                <div
                  class="StyledBox-sc-13pk1d4-0 dYebPD sc-iBPRYJ izjIZe"
                  role="gridcell"
                  style="flex: 100 0 auto; width: 100px;"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 ciRXCH"
                    tabindex="0"
                  >
                    <span
                      class="StyledText-sc-1sadyjn-0 DkZvS"
                    >
                      3
                    </span>
                  </div>
                </div>
                <div
                  class="StyledBox-sc-13pk1d4-0 dYebPD sc-iBPRYJ izjIZe"
                  role="gridcell"
                  style="flex: 100 0 auto; width: 100px;"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 ciRXCH"
                    tabindex="0"
                  >
                    <span
                      class="StyledText-sc-1sadyjn-0 DkZvS"
                    >
                      2.5
                    </span>
                  </div>
                </div>
                <div
                  class="StyledBox-sc-13pk1d4-0 dYebPD sc-iBPRYJ izjIZe"
                  role="gridcell"
                  style="flex: 100 0 auto; width: 100px;"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 hyrRvH"
                    tabindex="0"
                  >
                    <span
                      class="StyledText-sc-1sadyjn-0 cAmTWO"
                    >
                      7.5
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="StyledBox-sc-13pk1d4-0 dYebPD sc-jSgupP bBlXXz"
              role="rowgroup"
            >
              <div
                class="StyledBox-sc-13pk1d4-0 bEnuwL sc-gKsewC jbDERx"
                role="row"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 dYebPD sc-iBPRYJ izjIZe"
                  role="gridcell"
                  style="flex: 46 0 auto; width: 46px; max-width: 46px;"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 bdabZt"
                    tabindex="0"
                  >
                    <button
                      aria-label="Press Enter to expand this row for more information"
                      class="StyledButton-sc-323bzc-0 hiyJPE sc-fubCfw krfBye"
                      tabindex="0"
                      type="button"
                    >
                      <svg
                        aria-label="Add"
                        class="StyledIcon-ofa7kd-0 fuviCN"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M12,22 L12,2 M2,12 L22,12"
                          fill="none"
                          stroke="#000"
                          stroke-width="2"
                        />
                      </svg>
                    </button>
                  </div>
                </div>
                <div
                  class="StyledBox-sc-13pk1d4-0 dYebPD sc-iBPRYJ izjIZe"
                  role="gridcell"
                  style="flex: 100 0 auto; width: 100px;"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 bdabZt"
                    tabindex="0"
                  >
                    <span
                      class="StyledText-sc-1sadyjn-0 DkZvS"
                    >
                      Spoon
                    </span>
                  </div>
                </div>
                <div
                  class="StyledBox-sc-13pk1d4-0 dYebPD sc-iBPRYJ izjIZe"
                  role="gridcell"
                  style="flex: 100 0 auto; width: 100px;"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 ciRXCH"
                    tabindex="0"
                  >
                    <span
                      class="StyledText-sc-1sadyjn-0 DkZvS"
                    >
                      2
                    </span>
                  </div>
                </div>
                <div
                  class="StyledBox-sc-13pk1d4-0 dYebPD sc-iBPRYJ izjIZe"
                  role="gridcell"
                  style="flex: 100 0 auto; width: 100px;"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 ciRXCH"
                    tabindex="0"
                  >
                    <span
                      class="StyledText-sc-1sadyjn-0 DkZvS"
                    >
                      6.5
                    </span>
                  </div>
                </div>
                <div
                  class="StyledBox-sc-13pk1d4-0 dYebPD sc-iBPRYJ izjIZe"
                  role="gridcell"
                  style="flex: 100 0 auto; width: 100px;"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 hyrRvH"
                    tabindex="0"
                  >
                    <span
                      class="StyledText-sc-1sadyjn-0 cAmTWO"
                    >
                      13
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 dYebPD sc-pFZIQ"
            style="min-width: 446px;"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 bEnuwL sc-gKsewC jbDERx"
              role="row"
            >
              <div
                class="StyledBox-sc-13pk1d4-0 dYebPD sc-iBPRYJ izjIZe"
                role="gridcell"
                style="flex: 46 0 auto; width: 46px; max-width: 46px;"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 dFxLiY"
                />
              </div>
              <div
                class="StyledBox-sc-13pk1d4-0 dYebPD sc-iBPRYJ izjIZe"
                role="gridcell"
                style="flex: 100 0 auto; width: 100px;"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 dFxLiY"
                />
              </div>
              <div
                class="StyledBox-sc-13pk1d4-0 dYebPD sc-iBPRYJ izjIZe"
                role="gridcell"
                style="flex: 100 0 auto; width: 100px;"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 iwTeuS"
                />
              </div>
              <div
                class="StyledBox-sc-13pk1d4-0 dYebPD sc-iBPRYJ izjIZe"
                role="gridcell"
                style="flex: 100 0 auto; width: 100px;"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 iwTeuS"
                />
              </div>
              <div
                class="StyledBox-sc-13pk1d4-0 dYebPD sc-iBPRYJ izjIZe"
                role="gridcell"
                style="flex: 100 0 auto; width: 100px;"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 iwTeuS"
                >
                  <span
                    class="StyledText-sc-1sadyjn-0 bHgsVR"
                  >
                    Sum 40.44
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PagingTable  2`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 djOnwZ"
  >
    <div
      class="sc-bBXqnf ecIGsP"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 dYebPD sc-bdfBwQ gpAVaP"
        role="grid"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 dYebPD sc-dlfnbm fyQhTN"
          style="min-width: 400px;"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 bEnuwL sc-gKsewC jbDERx"
            role="row"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 dnixWH sc-eCssSg fEsIsO"
              role="columnheader"
              style="flex: 100 0 auto; width: 100px;"
              tabindex="0"
            >
              <div
                class="StyledBox-sc-13pk1d4-0 irfdwx"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 dfYOnT"
                >
                  <span
                    class="StyledText-sc-1sadyjn-0 DkZvS"
                  >
                    Item
                    <div
                      class="StyledBox-sc-13pk1d4-0 dYebPD sc-hKgILt cUcqsE"
                    />
                  </span>
                  <div
                    class="StyledBox__StyledBoxGap-sc-13pk1d4-1 bAwsPu"
                  />
                  <button
                    class="StyledButton-sc-323bzc-0 ebqXLG"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="StyledIcon-ofa7kd-0 dcacLZ"
                      viewBox="0 0 24 24"
                    />
                  </button>
                </div>
              </div>
            </div>
            <div
              class="StyledBox-sc-13pk1d4-0 dnixWH sc-eCssSg fEsIsO"
              role="columnheader"
              style="flex: 100 0 auto; width: 100px;"
              tabindex="0"
            >
              <div
                class="StyledBox-sc-13pk1d4-0 irfdwx"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 dfYOnT"
                >
                  <span
                    class="StyledText-sc-1sadyjn-0 DkZvS"
                  >
                    Qty
                    <div
                      class="StyledBox-sc-13pk1d4-0 dYebPD sc-hKgILt cUcqsE"
                    />
                  </span>
                  <div
                    class="StyledBox__StyledBoxGap-sc-13pk1d4-1 bAwsPu"
                  />
                  <button
                    class="StyledButton-sc-323bzc-0 ebqXLG"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="StyledIcon-ofa7kd-0 dcacLZ"
                      viewBox="0 0 24 24"
                    />
                  </button>
                </div>
              </div>
            </div>
            <div
              class="StyledBox-sc-13pk1d4-0 dnixWH sc-eCssSg fEsIsO"
              role="columnheader"
              style="flex: 100 0 auto; width: 100px;"
              tabindex="0"
            >
              <div
                class="StyledBox-sc-13pk1d4-0 irfdwx"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 dfYOnT"
                >
                  <span
                    class="StyledText-sc-1sadyjn-0 DkZvS"
                  >
                    Price
                    <div
                      class="StyledBox-sc-13pk1d4-0 dYebPD sc-hKgILt cUcqsE"
                    />
                  </span>
                  <div
                    class="StyledBox__StyledBoxGap-sc-13pk1d4-1 bAwsPu"
                  />
                  <button
                    class="StyledButton-sc-323bzc-0 ebqXLG"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="StyledIcon-ofa7kd-0 dcacLZ"
                      viewBox="0 0 24 24"
                    />
                  </button>
                </div>
              </div>
            </div>
            <div
              class="StyledBox-sc-13pk1d4-0 dnixWH sc-eCssSg fEsIsO"
              role="columnheader"
              style="flex: 100 0 auto; width: 100px;"
              tabindex="0"
            >
              <div
                class="StyledBox-sc-13pk1d4-0 irfdwx"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 dfYOnT"
                >
                  <span
                    class="StyledText-sc-1sadyjn-0 DkZvS"
                  >
                    Total
                    <div
                      class="StyledBox-sc-13pk1d4-0 dYebPD sc-hKgILt cUcqsE"
                    />
                  </span>
                  <div
                    class="StyledBox__StyledBoxGap-sc-13pk1d4-1 bAwsPu"
                  />
                  <button
                    class="StyledButton-sc-323bzc-0 ebqXLG"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="StyledIcon-ofa7kd-0 dcacLZ"
                      viewBox="0 0 24 24"
                    />
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="StyledBox-sc-13pk1d4-0 csIsXK sc-gsTCUz"
          style="min-width: 400px;"
        >
          <div />
          <div
            class="StyledBox-sc-13pk1d4-0 dYebPD sc-jSgupP bBlXXz"
            role="rowgroup"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 bEnuwL sc-gKsewC jbDERx"
              role="row"
            >
              <div
                class="StyledBox-sc-13pk1d4-0 dYebPD sc-iBPRYJ izjIZe"
                role="gridcell"
                style="flex: 100 0 auto; width: 100px;"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 bdabZt"
                  tabindex="0"
                >
                  <span
                    class="StyledText-sc-1sadyjn-0 DkZvS"
                  >
                    Fork
                  </span>
                </div>
              </div>
              <div
                class="StyledBox-sc-13pk1d4-0 dYebPD sc-iBPRYJ izjIZe"
                role="gridcell"
                style="flex: 100 0 auto; width: 100px;"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 bdabZt"
                  tabindex="0"
                >
                  <span
                    class="StyledText-sc-1sadyjn-0 DkZvS"
                  >
                    4
                  </span>
                </div>
              </div>
              <div
                class="StyledBox-sc-13pk1d4-0 dYebPD sc-iBPRYJ izjIZe"
                role="gridcell"
                style="flex: 100 0 auto; width: 100px;"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 bdabZt"
                  tabindex="0"
                >
                  <span
                    class="StyledText-sc-1sadyjn-0 DkZvS"
                  >
                    5.5
                  </span>
                </div>
              </div>
              <div
                class="StyledBox-sc-13pk1d4-0 dYebPD sc-iBPRYJ izjIZe"
                role="gridcell"
                style="flex: 100 0 auto; width: 100px;"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 bdabZt"
                  tabindex="0"
                >
                  <span
                    class="StyledText-sc-1sadyjn-0 DkZvS"
                  >
                    22
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 dYebPD sc-jSgupP bBlXXz"
            role="rowgroup"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 bEnuwL sc-gKsewC jbDERx"
              role="row"
            >
              <div
                class="StyledBox-sc-13pk1d4-0 dYebPD sc-iBPRYJ izjIZe"
                role="gridcell"
                style="flex: 100 0 auto; width: 100px;"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 bdabZt"
                  tabindex="0"
                >
                  <span
                    class="StyledText-sc-1sadyjn-0 DkZvS"
                  >
                    Knife
                  </span>
                </div>
              </div>
              <div
                class="StyledBox-sc-13pk1d4-0 dYebPD sc-iBPRYJ izjIZe"
                role="gridcell"
                style="flex: 100 0 auto; width: 100px;"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 bdabZt"
                  tabindex="0"
                >
                  <span
                    class="StyledText-sc-1sadyjn-0 DkZvS"
                  >
                    3
                  </span>
                </div>
              </div>
              <div
                class="StyledBox-sc-13pk1d4-0 dYebPD sc-iBPRYJ izjIZe"
                role="gridcell"
                style="flex: 100 0 auto; width: 100px;"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 bdabZt"
                  tabindex="0"
                >
                  <span
                    class="StyledText-sc-1sadyjn-0 DkZvS"
                  >
                    2.5
                  </span>
                </div>
              </div>
              <div
                class="StyledBox-sc-13pk1d4-0 dYebPD sc-iBPRYJ izjIZe"
                role="gridcell"
                style="flex: 100 0 auto; width: 100px;"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 bdabZt"
                  tabindex="0"
                >
                  <span
                    class="StyledText-sc-1sadyjn-0 DkZvS"
                  >
                    7.5
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 dYebPD sc-jSgupP bBlXXz"
            role="rowgroup"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 bEnuwL sc-gKsewC jbDERx"
              role="row"
            >
              <div
                class="StyledBox-sc-13pk1d4-0 dYebPD sc-iBPRYJ izjIZe"
                role="gridcell"
                style="flex: 100 0 auto; width: 100px;"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 bdabZt"
                  tabindex="0"
                >
                  <span
                    class="StyledText-sc-1sadyjn-0 DkZvS"
                  >
                    Spoon
                  </span>
                </div>
              </div>
              <div
                class="StyledBox-sc-13pk1d4-0 dYebPD sc-iBPRYJ izjIZe"
                role="gridcell"
                style="flex: 100 0 auto; width: 100px;"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 bdabZt"
                  tabindex="0"
                >
                  <span
                    class="StyledText-sc-1sadyjn-0 DkZvS"
                  >
                    2
                  </span>
                </div>
              </div>
              <div
                class="StyledBox-sc-13pk1d4-0 dYebPD sc-iBPRYJ izjIZe"
                role="gridcell"
                style="flex: 100 0 auto; width: 100px;"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 bdabZt"
                  tabindex="0"
                >
                  <span
                    class="StyledText-sc-1sadyjn-0 DkZvS"
                  >
                    6.5
                  </span>
                </div>
              </div>
              <div
                class="StyledBox-sc-13pk1d4-0 dYebPD sc-iBPRYJ izjIZe"
                role="gridcell"
                style="flex: 100 0 auto; width: 100px;"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 bdabZt"
                  tabindex="0"
                >
                  <span
                    class="StyledText-sc-1sadyjn-0 DkZvS"
                  >
                    13
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div>
        <div
          class="StyledBox-sc-13pk1d4-0 jBbFDW"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 bEnuwL"
          >
            <button
              class="StyledButton-sc-323bzc-0 emgczY sc-crrsfI efawFn"
              disabled=""
              type="button"
            >
              <div
                class="StyledBox-sc-13pk1d4-0 iQEJEP"
              >
                <svg
                  aria-label="Previous"
                  class="StyledIcon-ofa7kd-0 dEeaTZ"
                  viewBox="0 0 24 24"
                >
                  <polyline
                    fill="none"
                    points="7 2 17 12 7 22"
                    stroke="#000"
                    stroke-width="2"
                    transform="matrix(-1 0 0 1 24 0)"
                  />
                </svg>
                <div
                  class="StyledBox__StyledBoxGap-sc-13pk1d4-1 hjorfk"
                />
                Previous
              </div>
            </button>
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 dfYOnT"
          >
            <span
              class="StyledText-sc-1sadyjn-0 DkZvS"
            >
              Page 
            </span>
            <div
              class="StyledBox__StyledBoxGap-sc-13pk1d4-1 eBVJAG"
            />
            <div
              class="sc-kEjbxe cXmYUY"
            >
              <div
                class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 dpaJQp"
              >
                <input
                  aria-label="Select page to jump to"
                  autocomplete="off"
                  class="StyledTextInput-sc-1x30a0s-0 jKshUE sc-jrAGrp dpVZhg sc-dQppl effoDK"
                  inputmode="numeric"
                  pattern="[0-9]*"
                  type="text"
                  value="1"
                />
              </div>
              <div
                class="StyledBox-sc-13pk1d4-0 dfYOnT sc-iqHYGH cCjMWC"
              >
                <button
                  class="StyledButton-sc-323bzc-0 hiyJPE"
                  tabindex="-1"
                  type="button"
                >
                  <svg
                    aria-label="Add"
                    class="StyledIcon-ofa7kd-0 dEeaTZ"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12,22 L12,2 M2,12 L22,12"
                      fill="none"
                      stroke="#000"
                      stroke-width="2"
                    />
                  </svg>
                </button>
                <button
                  class="StyledButton-sc-323bzc-0 hiyJPE"
                  tabindex="-1"
                  type="button"
                >
                  <svg
                    aria-label="Subtract"
                    class="StyledIcon-ofa7kd-0 dEeaTZ"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M2,12 L22,12"
                      fill="none"
                      stroke="#000"
                      stroke-width="2"
                    />
                  </svg>
                </button>
              </div>
            </div>
            <div
              class="StyledBox__StyledBoxGap-sc-13pk1d4-1 eBVJAG"
            />
            <span
              style="white-space: nowrap;"
            >
              of 1
            </span>
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 bEnuwL"
          >
            <button
              aria-label="Open Drop"
              class="StyledButton-sc-323bzc-0 ebqXLG Select__StyledSelectDropButton-sc-17idtfo-1 iGEQF"
              type="button"
            >
              <div
                class="StyledBox-sc-13pk1d4-0 jmuHez"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 iAryDB"
                >
                  <div
                    class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 dpaJQp"
                  >
                    <input
                      aria-label="Select rows per page"
                      autocomplete="off"
                      class="StyledTextInput-sc-1x30a0s-0 nnMiQ Select__SelectTextInput-sc-17idtfo-0 bIurki sc-bqyKva cBOjpo"
                      readonly=""
                      tabindex="-1"
                      type="text"
                      value="20 rows"
                    />
                  </div>
                </div>
                <div
                  class="StyledBox-sc-13pk1d4-0 eA-DBEo"
                  style="min-width: auto;"
                >
                  <svg
                    aria-label="FormDown"
                    class="StyledIcon-ofa7kd-0 fuviCN"
                    viewBox="0 0 24 24"
                  >
                    <polyline
                      fill="none"
                      points="18 9 12 15 6 9"
                      stroke="#000"
                      stroke-width="2"
                    />
                  </svg>
                </div>
              </div>
            </button>
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 bEnuwL"
          >
            <button
              class="StyledButton-sc-323bzc-0 emgczY sc-crrsfI efawFn"
              disabled=""
              type="button"
            >
              <div
                class="StyledBox-sc-13pk1d4-0 iQEJEP"
              >
                Next
                <div
                  class="StyledBox__StyledBoxGap-sc-13pk1d4-1 hjorfk"
                />
                <svg
                  aria-label="Next"
                  class="StyledIcon-ofa7kd-0 dEeaTZ"
                  viewBox="0 0 24 24"
                >
                  <polyline
                    fill="none"
                    points="7 2 17 12 7 22"
                    stroke="#000"
                    stroke-width="2"
                  />
                </svg>
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
